--- a/sub2.html
+++ b/sub2.html
@@ -247,7 +247,8 @@
                     </div> <!-- prdct9 -->
                     <div class="prdct prdct10">
                         <div class="img">
-                            <img src="images/sub2-shop-prd-coffee-01.jpg" alt="coffee01">
+                            <img src="images/sub2-shop-prd-coffee-
+                                      10.jpg" alt="coffee10">
                             <div class="black-box">
                                 <div class="ico"><a href="#none" class="favorite"><img src="images/icon_favorite_line_brown.png" alt="icon"></a></div>
                             </div>
