--- a/sub2.html
+++ b/sub2.html
@@ -100,13 +100,13 @@
     <section id="prdct">
         <div class="inner">
             <ul class="nav">
-                <li><a href="#">전체상품(ALL)</a></li>
-                <li><a href="#">커피(COFFEE)</a></li>
-                <li><a href="#">굿즈(GOODS)</a></li>
-                <li><a href="#">선물세트(GIFTS)</a></li>
+                <li><a href="#prdct">전체상품(ALL)</a></li>
+                <li><a href="#coffee">커피(COFFEE)</a></li>
+                <li><a href="#goods">굿즈(GOODS)</a></li>
+                <li><a href="#gifts">선물세트(GIFTS)</a></li>
             </ul>
 
-            <article class="coffee">
+            <article class="coffee" id="coffee">
                 <h2>커피(COFFEE)</h2>
                 <div class="prdct-wrap">
                     <div class="prdct prdct1">
@@ -265,7 +265,7 @@
             </article>
             <!-- coffee -->
 
-            <article class="goods">
+            <article class="goods"  id="goods">
                 <h2>굿즈(GOODS)</h2>
                 <div class="prdct-wrap">
                     <div class="prdct prdct1">
@@ -332,7 +332,7 @@
             </article>
             <!-- goods -->
 
-            <article class="gifts">
+            <article class="gifts" id="gifts">
                 <h2>선물세트(GIFTS)</h2>
                 <div class="prdct-wrap">
                     <div class="prdct prdct1">
