--- a/sub4.html
+++ b/sub4.html
@@ -99,7 +99,7 @@
     <section id="board">
         <div class="inner">
 
-            <h2>자주 묻는 질문</h2>
+            <h2>공지 &middot; 자주 묻는 질문</h2>
             <div class="search">
                 <select name="search" id="s-select" >
                     <option value="title">제목</option>
