--- a/sub4.html
+++ b/sub4.html
@@ -288,6 +288,15 @@
 ■ 개인정보의 보유 및 이용 기간
 회사는 개인정보 수집 및 이용목적이 달성된 후에는 예외없이 해당정보를 파기합니다. </textarea></td>
                     </tr> <!-- tr9 -->
+                    <tr>
+                        <th></th>
+                        <td>
+                            <input type="radio" name="agree" id="agree" checked>
+                            <label for="agree"> 동의</label>
+                            <input type="radio" name="disagree" id="disagree">
+                            <label for="disagree"> 동의안함</label>
+                        </td>
+                    </tr>
                 </table>
             </div>
             <div class="submit"><form action=""><input type="submit" value="보내기" class="submit-btn"></form></div>
