--- a/sub4.html
+++ b/sub4.html
@@ -293,7 +293,7 @@
                         <td>
                             <input type="radio" name="agree" id="agree" checked>
                             <label for="agree"> 동의</label>
-                            <input type="radio" name="disagree" id="disagree">
+                            <input type="radio" name="agree" id="disagree">
                             <label for="disagree"> 동의안함</label>
                         </td>
                     </tr>
